# pypll

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
docs/: getting-started.md  index.html  index.md  reference.md
getting-started/: index.html
reference/: index.html
search/: search_index.json
src/pypll/: __init__.py  _client.py  api.py
src/pypll.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
