[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pypll"
version = "0.1.0"
description = "Python client for the Premier Lacrosse League stats API"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Developers",
    "Framework :: Pandas",
]
dependencies = [
    "requests>=2.28",
    "pandas>=1.5",
]

[project.urls]
Homepage = "https://github.com/WalrusQuant/pypll"
Repository = "https://github.com/WalrusQuant/pypll"

[tool.setuptools.packages.find]
where = ["src"]
